force-app/main/default/objects/Organization_E_Invoice__c/Organization_E_Invoice__c.object-meta.xml
<CustomObject>
    <label>Organization E-Invoice</label>
    <nameField>
        <displayFormat>OE-{000000}</displayFormat>
        <label>Organization E-Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Organization E-Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>