force-app/main/default/objects/Organization_E_Invoice__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>This is a Master-Detail relationship to Organization</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Organization E-Invoices</relationshipLabel>
    <relationshipName>Organization_E_Invoices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>