force-app/main/default/objects/Organization_E_Invoice__c/fields/Document_Issuer_ID__c.field-meta.xml
<CustomField>
    <fullName>Document_Issuer_ID__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>Government Issued details which are country specific for EMEA region</description>
    <label>Document Issuer ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>