force-app/main/default/objects/Organization_E_Invoice__c/fields/E_Invoice_Preference__c.field-meta.xml
<CustomField>
    <fullName>E_Invoice_Preference__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>The field contains invoice format preference of customer</description>
    <label>E-Invoice Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E-invoice XML Embedded in PDF</fullName>
            </value>
            <value>
                <fullName>E-invoice PDF</fullName>
            </value>
            <value>
                <fullName>E-invoice XML</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>