force-app/main/default/objects/Organization_E_Invoice__c/fields/Group_VAT_ID__c.field-meta.xml
<CustomField>
    <fullName>Group_VAT_ID__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>Government Issued details which are country specific for EMEA region</description>
    <label>Group VAT ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>