force-app/main/default/objects/Organization_E_Invoice__c/fields/Local_VAT_valid__c.field-meta.xml
<CustomField>
    <fullName>Local_VAT_valid__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>This fields specified if Local VAT ID is valid or not</description>
    <label>Local VAT valid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>