force-app/main/default/objects/Organization_E_Invoice__c/fields/MDM_Id__c.field-meta.xml
<CustomField>
    <fullName>MDM_Id__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>This is the MDM unique identifier</description>
    <externalId>true</externalId>
    <label>MDM Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>