force-app/main/default/objects/Organization_E_Invoice__c/fields/MDM_Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>MDM_Invoice_Id__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>This is the Invoice Id unique identifier</description>
    <externalId>true</externalId>
    <label>MDM Invoice Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>