force-app/main/default/objects/Organization_E_Invoice__c/fields/PEC_Address__c.field-meta.xml
<CustomField>
    <fullName>PEC_Address__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>This field has PEC email address</description>
    <label>PEC Address</label>
    <type>Email</type>
</CustomField>