force-app/main/default/objects/Organization_E_Invoice__c/fields/Preference_to_receive_invoice__c.field-meta.xml
<CustomField>
    <fullName>Preference_to_receive_invoice__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>This field contains portal preferences to receive invoice</description>
    <label>Preference to receive invoice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Centralized Portal</fullName>
            </value>
            <value>
                <fullName>Regional Portal</fullName>
            </value>
            <value>
                <fullName>Kantonal Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>