force-app/main/default/objects/Organization_E_Invoice__c/fields/Reference_Administration__c.field-meta.xml
<CustomField>
    <fullName>Reference_Administration__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>Government Issued details which are country specific for EMEA region</description>
    <label>Reference Administration</label>
    <length>50</length>
    <type>Text</type>
</CustomField>