force-app/main/default/objects/Organization_E_Invoice__c/fields/Regional_Fiscal_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Regional_Fiscal_Identifier__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>Government Issued details which are country specific for EMEA region</description>
    <label>Regional Fiscal Identifier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>