force-app/main/default/objects/Organization_E_Invoice__c/fields/Unique_identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_identifier__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>This field is corresponding to EMEA region</description>
    <label>Unique identifier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>